# D-FINE

./: .gitignore  SETUP_UV.md  pyproject.toml
configs/dataset/: custom_detection.yml
configs/dfine/custom/: dfine_hgnetv2_n_custom.yml
configs/dfine/include/: dataloader.yml
src/data/dataset/: coco_dataset.py
src/misc/: dist_utils.py
src/nn/backbone/: csp_resnet.py  hgnetv2.py  presnet.py
src/solver/: _solver.py  det_engine.py
src/zoo/dfine/: dfine_criterion.py
tools/dataset/: yolo_to_coco.py
vertex_ai/: Dockerfile  README.md  download_gcs_data.py  entrypoint.sh  requirements.txt  run_on_vertex_ai.py  setup.sh  vertex.yaml
